tirei o index da pasta backend

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="img/pokedex.webp">
+  <link rel="shortcut icon" type="image/x-icon" href="frontend/img/pokedex.webp">
   <title>Pokédex</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="frontend/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
   <!-- Campo de busca -->
   <div class="search-container">
     <input type="text" id="search" placeholder="Busque pelo nome">
-    <button class="button-search" onclick="procurarPokemon()"><img src="img/search_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="lupa"></button>
+    <button class="button-search" onclick="procurarPokemon()"><img src="frontend/img/search_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="lupa"></button>
   </div>
 
   <!-- Lista de Pokémon -->
@@ -34,6 +34,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="frontend/script.js"></script>
 </body>
 </html>
